Product Search: Fix Search label alignment on the edit page (https://github.com/woocommerce/woocommerce-blocks/pull/5072)
* Fix product search margin style on edit page woocommerce/woocommerce-blocks#3083

Fix product search margin style on edit page

* fix button size

--- a/plugins/woocommerce-blocks/assets/js/blocks/product-search/editor.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-search/editor.scss
@@ -1,6 +1,12 @@
 .wc-block-product-search__field.input-control {
 	color: #828b96 !important;
+	padding: 0;
+
+	.components-base-control__field {
+		margin-bottom: 0;
+	}
 }
+
 .wc-block-product-search {
 	.wc-block-product-search__fields {
 		.block-editor-rich-text {
